--- a/apache.yml
+++ b/apache.yml
@@ -3,6 +3,7 @@
   tasks:
     - name: ensure nginx is at the latest version
       apt: name=nginx state=latest
+      sudo: yes
     - name: start nginx
       service:
           name: nginx
